--- a/wetube/package.json
+++ b/wetube/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/Cllaude99/nomadCoder.git"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node src/server.js"
   },
   "author": "Cllaude",
   "license": "MIT",
@@ -16,6 +16,13 @@
   },
   "homepage": "https://github.com/Cllaude99/nomadCoder#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20"
   }
 }
