--- a/wetube/package.json
+++ b/wetube/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/Cllaude99/nomadCoder.git"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js"
+    "start": "nodemon --exec babel-node src/init.js"
   },
   "author": "Cllaude",
   "license": "MIT",
