--- a/wetube/package.json
+++ b/wetube/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/Cllaude99/nomadCoder#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
