--- a/Wetube/package.json
+++ b/Wetube/package.json
@@ -2,7 +2,6 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "The best way to watch videos.",
-  "type": "module",
   "scripts": {
     "start": "nodemon --exec babel-node src/server.js "
   },
@@ -13,6 +12,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
