--- a/Wetube/package.json
+++ b/Wetube/package.json
@@ -9,13 +9,16 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
-    "nodemon": "^3.0.1"
+    "@prettier/plugin-pug": "^2.5.2",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.0"
   }
 }
