--- a/Wetube/package.json
+++ b/Wetube/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "The best way to watch videos.",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js "
+    "start": "nodemon --exec babel-node src/init.js "
   },
   "author": "Cllaude",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
@@ -18,7 +19,6 @@
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
     "@prettier/plugin-pug": "^2.5.2",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.0"
+    "nodemon": "^3.0.1"
   }
 }
