--- a/Wetube/package.json
+++ b/Wetube/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "The best way to watch videos.",
   "scripts": {
-    "start": "nodemon --exec babel-node src/init.js "
+    "dev:server": "nodemon",
+    "dev:assets": "webpack"
   },
   "author": "Cllaude",
   "license": "MIT",
@@ -25,6 +26,14 @@
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
     "@prettier/plugin-pug": "^2.5.2",
-    "nodemon": "^3.0.1"
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "nodemon": "^3.0.1",
+    "sass": "^1.64.2",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
