--- a/Wetube/package.json
+++ b/Wetube/package.json
@@ -23,7 +23,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.11"
