Add Basename in BrowserRouter

--- a/react-for-beginner/package.json
+++ b/react-for-beginner/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Cllaude99.github.io/nomadCoder"
+  "homepage": "https://Cllaude99.github.io/nomadCoder/react-for-beginner"
 }
