--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^16.18.41",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "cra-template-typescript": "1.2.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "6.4",
