--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.33.0",
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26"
   }
 }
